@@ -1,0 +1,53 @@
+/* bug-3456.c
+   Invalid asm generated when using -mz80 --allow-undocumented-instructions.
+ */
+
+#include <testfwk.h>
+
+/// Test derived from code by SF user "Under4Mhz" in 2022.
+// GPL 2.0
+#include <stdbool.h>
+
+typedef struct  { int x; int y; } maths_point3d;
+
+bool maths_clip_visible( const maths_point3d *point ) __z88dk_fastcall;
+void maths_clip_points( maths_point3d *first, maths_point3d *second );
+
+///< \brief Draw lines using two points
+bool maths_clip_line( maths_point3d *first, maths_point3d *second )
+{
+    bool c1 = maths_clip_visible( first );
+    bool c2 = maths_clip_visible( second );
+    bool onscreen = true;
+
+    // On screen
+    if ( c1 && c2 ) {
+
+    // Off screen
+    } else if ( !c1 && !c2 ) {
+
+        onscreen = false;
+
+        // Clip
+    } else {
+
+        maths_clip_points( first, second );
+    }
+
+    return onscreen;
+}
+
+void testBug() {
+    ASSERT ( maths_clip_line (0, 0) );
+}
+
+bool maths_clip_visible( const maths_point3d *point ) __z88dk_fastcall
+{
+	return false;
+}
+
+void maths_clip_points( maths_point3d *first, maths_point3d *second )
+{
+	ASSERT ( 0 );
+}
+
